k8s/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: credit-app-ingress
spec:
  rules:
  - host: staging.credit-app
